fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
- font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  width: 100%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 0;
+  padding: 0;
+  background: whitesmoke;
 }
 
 .background {
-background-color: whitesmoke;
-z-index: 0;
-width: 100%;
+  z-index: 0;
+  padding: 10;
 }
 
 header, footer {
@@ -15,8 +20,6 @@ header, footer {
   top: 0;
   left: 0;
   margin: 0;
-  width: 100vw;
-  height: auto;
   color: white;
   text-align: center;
 }
@@ -29,18 +32,18 @@ header, footer {
 
 .container {
   display: flex;
-  width: 90vw;
+  width: 100vw;
   height: auto;
+  max-width: 100%;
   background-color: rgb(255, 250, 243);
-  margin: 40 5;
-  padding: 50;
+  margin: 50 0;
   align-items: center;
   border-radius: 30px;
   border-top: 12px solid hsl(345, 100%, 32%);
   border-left: 4px solid hsl(345, 100%, 32%);
   border-right: 4px solid hsl(345, 100%, 32%);
   box-shadow: 5px 5px 10px grey;
-
+overflow-x: hidden;
 }
 
 .container, .headings-first, .headings-second {
